add swagger route to controller for sudoku solver
