# api/controllers/sudoku_controller/index.js
@@ -1,0 +1,21 @@
+const getSudokuSolution = (req, res) => {
+	console.log('Getting the problems!', req.swagger.params.inputString.value);
+	res
+		.status(200)
+		.send([
+			'1', '2', '3', '4', '5', '6', '7', '8', '9',
+			'1', '2', '3', '4', '5', '6', '7', '8', '9',
+			'1', '2', '3', '4', '5', '6', '7', '8', '9',
+			'1', '2', '3', '4', '5', '6', '7', '8', '9',
+			'1', '2', '3', '4', '5', '6', '7', '8', '9',
+			'1', '2', '3', '4', '5', '6', '7', '8', '9',
+			'1', '2', '3', '4', '5', '6', '7', '8', '9',
+			'1', '2', '3', '4', '5', '6', '7', '8', '9',
+			'1', '2', '3', '4', '5', '6', '7', '8', '9'
+		]);
+};
+
+
+module.exports = {
+	getSudokuSolution
+};
